--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src-java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/flerry"/>
+	<classpathentry kind="lib" path="libs/amf-serializer-1.0.0.jar"/>
 	<classpathentry kind="output" path="bin-java"/>
 </classpath>
